<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/info"></item>
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_video_library_black_24dp"
            android:title="@string/videos"></item>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile"></item>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"></item>

    </group>
    <item android:title="@string/eighties">
        <menu>
            <item
                android:id="@+id/nav_game"
                android:icon="@drawable/ic_directions_boat_black_24dp"
                android:title="@string/game"></item>
            <item
                android:id="@+id/nav_picture"
                android:icon="@drawable/ic_camera_alt_black_24dp"
                android:title="@string/photo"></item>
        </menu>
    </item>

</menu>